# Fixed-4D-Topology

./: .env.example  .gitignore  ARXIV_PUBLICATION_PLAN.md  CITATION.cff  COLLABORATION_PROPOSALS.md  COMPLETE_THESIS_SUMMARY.md  COMPLETION_STATUS.md  COMPREHENSIVE_RESEARCH_SUMMARY.md  CONCEPTUAL_CORRECTION.md  CONCEPTUAL_CORRECTION_SUMMARY.md  CONCEPT_CLARIFICATION.md  CONTRIBUTING.md  CORE_CONCEPT_REVISION.md  CU2O_CRITICAL_ANALYSIS.md  DATA_PROVENANCE.md  DISCOVERY_HISTORY.md  Dimensionics_Final_Paper.md  EFFECTIVE_DIMENSION_FRAMEWORK.md  EXECUTION_PLAN.md  EXECUTIVE_SUMMARY.md  EXPANSION_RESEARCH_PLAN.md  FINAL_CHECKLIST.md  FINAL_DELIVERY_SUMMARY.md  FINAL_RELEASE_STATUS.md  FINAL_RELEASE_STEPS.md  FINAL_RESEARCH_REPORT.md  FINAL_REVISION_COMPLETE.md  FINAL_REVISION_SUMMARY.md  FINAL_STATUS.md  FINAL_SUBMISSION_PACKAGE.md  FINAL_TRANSLATION_REPORT.md  FREEDOM_INTERPRETATION.md  FUSION_COMPLETE_SUMMARY.md  GITHUB_ABOUT.txt  GITHUB_PUSH_COMPLETE.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_INSTRUCTIONS.md  GIT_SUBMISSION_COMPLETE.md  HIERARCHICAL_STRUCTURE.md  LATEX_INSTALL_GUIDE.md  (+154 more)
.github/workflows/: ci.yml  compile-paper-pdf.yml
arxiv-paper/: ARXIV_STRATEGY_T1-T8.md  ARXIV_SUBMISSION_T1-T8.md  Makefile  README.md  SUBMISSION_CHECKLIST.md  arxiv_submission.txt  main.aux  main.out  main.synctex(busy)  main.tex
arxiv-paper/macros/: commands.tex
arxiv-paper/sections/: applications.tex  conclusion.tex  introduction.tex  main_results.tex  numerical.tex  preliminaries.tex
chapters/: chapter1_bilingual.tex  chapter1_final.tex  chapter1_full_bilingual.tex  chapter1_introduction.tex  chapter1_introduction_chinese.tex  chapter1_introduction_expanded.tex  chapter1_reconstructed.tex  chapter1_revised.tex  chapter1_rmp.tex  chapter2_bilingual.tex  chapter2_extended.tex  chapter2_final.tex  chapter2_foundations.tex  chapter2_foundations_expanded.tex  chapter2_foundations_rmp.tex  chapter2_full_bilingual.tex  chapter2_reconstructed.tex  chapter2_related_frameworks.tex  chapter2_revised.tex  chapter3_bilingual.tex  chapter3_correspondence.tex  chapter3_correspondence_expanded.tex  chapter3_correspondence_rmp.tex  chapter3_extended.tex  chapter3_final.tex  chapter3_full_bilingual.tex  chapter3_reconstructed.tex  chapter3_revised.tex  chapter4_bilingual.tex  chapter4_experimental_expanded.tex  chapter4_experiments.tex  chapter4_experiments_rmp.tex  chapter4_extended.tex  chapter4_final.tex  chapter4_full_bilingual.tex  chapter4_reconstructed.tex  chapter4_revised.tex  chapter4_rmp.tex  chapter4_validation_revised.tex  chapter5_applications.tex  (+20 more)
docs/: API.md  COMPATIBILITY_ANALYSIS_M_SERIES.md  M_SERIES_L1_ROADMAP.md  M_SERIES_RECONSTRUCTION.md  RESEARCH_PLAN_DIMENSIONICS_PHYSICS.md  RESEARCH_PLAN_M_SERIES_RIGORIZATION.md  VIRTUAL_ENVIRONMENT_GUIDE.md  index.md
docs/Dimensionics-Physics/: COMPARISON_WITH_M_SERIES.md  DP1_PROBLEM_FORMULATION.md  EXECUTION_LOG.md  FINAL_REVIEW.md  FUTURE_ROADMAP.md  README.md  SUBMISSION_PREPARATION.md
docs/ag-integration/: FINAL_REPORT.md  INTEGRATION_WITH_FIXED_4D_TOPOLOGY.md  PAPERS_COLLECTION_SUMMARY.md  UNIFIED_FRAMEWORK_INDEX.md
docs/milestones/: K-101-completion.md
docs/paper_review/: README.md
docs/papers/: README.md  STRUCTURE.md
docs/peer_review/: expert_review_number_theory.md
docs/phase4-unification/: DEEP_RESEARCH_PLAN.md  EXPERIMENTAL_PREDICTIONS.md  EXTENDED_RESEARCH_HIJ.md  FUSION_THEOREMS_INDEX.md  HIJ_CROSSOVER_FRAMEWORK.md  JOURNAL_SUBMISSION_PACKAGE.md  JOURNAL_SUBMISSION_PLAN.md  MATHEMATICAL_APPENDIX.md  README.md  STATUS_UPDATE_2026-02-07.md
docs/research/: AI_EXECUTION_FRAMEWORK.md  AI_EXECUTION_MANUAL.md  ARCHIVE_MANIFEST.md  BATCH_EXECUTE_READY_TASKS.md  EXECUTION_STATUS.md  EXPERT_CONSULTATION_PREP.md  FINAL_EXECUTION_SUMMARY.md  HOUR_1_EXECUTION_REPORT.md  NEXT_STEP_EXECUTION_REPORT.md  PARALLEL_EXECUTION_COORDINATOR.md  PHASE1_METHODOLOGY_FIX_REPORT.md  PHASE2_DEEP_RESEARCH_ROADMAP.md  README.md  RESEARCH_PROTOTYPE_DISCLAIMER.md  RIGOR_AUDIT.md  SETUP_SUMMARY.md  STRICTNESS_CHECKLIST.md  execute_task_demo.py  execution_controller.py  execution_phase2.py  execution_phase3.py  execution_phase4.py  paper_annals.tex  paper_master.md
docs/roadmaps/: QUANTUM_CHAOS_APPLICATIONS.md  README.md  SPECTRAL_DIMENSION_FLOW.md
docs/theory/: CODE_ORGANIZATION.md  README.md  (+3 more)
examples/: example_cantor_representation.py  example_fractal_arithmetic.py  example_spectral_dimension.py
extended_research/: CERNET_COLLABORATION_PROPOSAL.md  DATA_COLLECTION_FINAL_v2.3.md  DATA_COLLECTION_PROGRESS_v2.1.md  DATA_COLLECTION_PROGRESS_v2.2.md  DATA_SOURCE_AUDIT.md  HIJ_DEEP_RESEARCH_REPORT.md  HIJ_EXTENDED_RESEARCH_PROGRESS.md  HIJ_WEEK2_PROGRESS_REPORT.md  HIJ_WEEK3_COMPLETION_REPORT.md  IMMEDIATE_IMPROVEMENTS_SUMMARY.md  large_scale_results.json
figure_data/: figure1.tex  figure1_data.csv  figure1_data.json  figure2_data.csv  figure2_data.json  figure3_data.json
github_release/: GITHUB_RELEASE_NOTES.md  RELEASE_v3.2.md  REVIEWER_RESPONSE.md
notebooks/: 01_introduction_to_dimensionics.ipynb  02_network_geometry.ipynb  03_advanced_topics.ipynb  README.md
output/: chapter1_introduction_expanded.md  main_updated.aux  main_updated.out  main_updated.toc
paper_comprehensive/: README.md  main.tex  references.bib
papers/: README.md  unified-framework-analysis-T5.md
references/: extended_bibliography.bib  literature_collection.md  references.bib
release_v1.0/: RELEASE_NOTES.md  cover_letter_prl.tex  prl_paper_for_submission.tex
releases/: RELEASE_v3.2.md  VERSION.txt
research/: DAILY_SUMMARY_2026-02-10.md  DAILY_SUMMARY_2026-02-11.md  EXECUTION_LOG.md  MASTER_RESEARCH_LOG.md
research_execution/: COMPREHENSIVE_RESULTS.md  EXECUTION_COMPLETE.md  FINAL_RESEARCH_REPORT.md  PHASE2_ASSESSMENT.md  PHASE2_PLAN.md  RESEARCH_REPORT_PHASE1.md  STATUS_REPORT.md
scripts/: activate.bat  activate.sh  generate_figures.py  generate_figures_svg.py  literature_search.py  prepare_figure_data.py  verify_data_provenance.py
tests/: test_cantor_representation.py  test_fractal_arithmetic.py  test_network_dimension.py  test_spectral_dimension.py
(+1295 files in other folders)
