[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dimensionics"
version = "3.0.0"
description = "Dimensionics: A Unified Mathematical Theory of Dimension"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wang Bin & Kimi Agent", email = "wang.bin@foxmail.com"}
]
keywords = [
    "dimension theory",
    "fractal geometry",
    "spectral dimension",
    "unified field theory",
    "mathematical physics",
    "Cantor set",
    "master equation",
    "convexity",
    "renormalization group",
    "complex networks",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Education",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "black>=21.0.0",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.3.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dpsnet/Fixed-4D-Topology"
Documentation = "https://github.com/dpsnet/Fixed-4D-Topology/blob/main/Dimensionics_Final_Paper.md"
Repository = "https://github.com/dpsnet/Fixed-4D-Topology"
"Bug Tracker" = "https://github.com/dpsnet/Fixed-4D-Topology/issues"

[project.scripts]
dimensionics-verify = "dimensionics.cli:verify_all_bridges"
dimensionics-demo = "dimensionics.cli:demo"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
