[metadata]
name = fixed-4d-topology
version = 1.0.1
author = AI Research Engine
author_email = research@fixed4dtopology.org
description = Dynamic Spectral Dimension Unified Field Theory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dpsnet/Fixed-4D-Topology
project_urls =
    Bug Tracker = https://github.com/dpsnet/Fixed-4D-Topology/issues
    Documentation = https://github.com/dpsnet/Fixed-4D-Topology/tree/main/docs
    Source Code = https://github.com/dpsnet/Fixed-4D-Topology
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Information Analysis
keywords =
    fractal geometry
    spectral dimension
    modular forms
    algebraic topology
    unified field theory
    mathematical physics
    heat kernel
    Cantor set
    Grothendieck group

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    sympy>=1.9
    matplotlib>=3.4.0
    numba>=0.56.0
    pandas>=1.3.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.2.0
    pytest-cov>=3.0.0
    black>=21.0.0
    flake8>=4.0.0
    mypy>=0.910
docs =
    sphinx>=4.3.0
    sphinx-rtd-theme>=1.0.0
notebooks =
    jupyter>=1.0.0
    ipython>=7.30.0
    plotly>=5.3.0

[options.entry_points]
console_scripts =
    fixed4d-verify = fixed_4d_topology.cli:verify_command

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[tool:pytest]
testpaths = tests
addopts = -ra -q --strict-markers
